# selene

./: .env.example  .gitignore  LICENSE  README.md  main.py  pyproject.toml
config/: fetch_api.yaml
resources/: fetch_api.yaml  provider.yaml
selene/: __init__.py
selene/adapters/cli/: argument_parser.py  cli_handler.py
selene/adapters/inbound/cli/: cli_handler.py
selene/adapters/outbound/external_apis/: alpha_vantage_api.py  api_data_mapper.py
selene/adapters/outbound/persistence/postgres/: api_log_repository.py  market_data_repository.py
selene/adapters/repository/file/: json_reader.py  json_writer.py
selene/adapters/repository/postgres/: api_log_repository.py  market_data_repository.py
selene/adapters/service/: alpha_vantage_api.py  api_data_mapper.py
selene/application/containers/: market_data_container.py
selene/application/use_cases/: fetch_market_data_use_case.py
selene/domains/market_data/entities/: api_log.py  market_data.py
selene/domains/market_data/service/: market_data_service.py
selene/domains/market_data/value_objects/: api_response.py
selene/infrastructure/configuration/: config_loader.py  env_loader.py  market_data_config.py
selene/infrastructure/database/: connection_factory.py  db_config.py
selene/infrastructure/database/service/: database_config_interface.py
selene/infrastructure/logging/: __init__.py  logger_factory.py
selene/ports/market_data/repository/: api_log_ports.py  market_data_ports.py
selene/ports/market_data/service/: api_data_mapper.py  market_data_api.py
selene/ports/outbound/: api_data_mapper.py  market_data_repository_port.py
